--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 </button>
             </div>
             <ul class="mt-5 tracking-wider space-y-4 text-sm font-medium uppercase">
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-200">Home</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-200">About Us</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-200">Our Services</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-200">Our Portfolio</a></li>
+                <li><a href="#" class="block px-4 py-2 text-gray-200">Home</a></li>
+                <li><a href="#" class="block px-4 py-2 text-gray-200">About Us</a></li>
+                <li><a href="#" class="block px-4 py-2 text-gray-200">Our Services</a></li>
+                <li><a href="#" class="block px-4 py-2 text-gray-200">Our Portfolio</a></li>
                 <li><a href="#" class="block px-4 py-2 bg-primary text-white hover:bg-accent">Contact Us Now</a></li>
             </ul>
         </div>
@@ -409,7 +409,8 @@
         <div class="container mx-auto py-4">
             <div class="md:flex justify-between text-xs md:text-lg">
                 <p class="tracking-wide">
-                   &copy; Copyright Powered by Shiva Furnitures
+                   &copy;  
+                    Copyright Powered by Shiva Furnitures
                 </p>
                 <p>
                     Made with <i class="fas fa-heart text-red-500"></i> by  <a href="https://spreadmybusiness.in/"
